src/metrics/snapshots/big_code_analysis__metrics__abc__tests__python_typed_assignment_counts_bare_annotation_does_not.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 1,
  "branches": 0,
  "conditions": 0,
  "magnitude": 1.0,
  "value": 1.0,
  "assignments_average": 1.0,
  "branches_average": 0.0,
  "conditions_average": 0.0,
  "assignments_min": 1,
  "assignments_max": 1,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 0
}
