src/metrics/snapshots/big_code_analysis__metrics__abc__tests__python_walrus_counts_as_assignment.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 1,
  "branches": 0,
  "conditions": 1,
  "magnitude": 1.4142135623730951,
  "assignments_average": 1.0,
  "branches_average": 0.0,
  "conditions_average": 1.0,
  "assignments_min": 1,
  "assignments_max": 1,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 1,
  "conditions_max": 1
}
