src/metrics/snapshots/big_code_analysis__metrics__abc__tests__ruby_class_complex_function.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 1,
  "branches": 1,
  "conditions": 2,
  "magnitude": 2.449489742783178,
  "value": 0.0,
  "assignments_average": 0.3333333333333333,
  "branches_average": 0.3333333333333333,
  "conditions_average": 0.6666666666666666,
  "assignments_min": 0,
  "assignments_max": 1,
  "branches_min": 0,
  "branches_max": 1,
  "conditions_min": 0,
  "conditions_max": 2
}
